<resources>
    <string name="app_name">NidonNaedon</string>
    <string name="label_start_game">게임을 시작합니다~!!</string>
    <string name="label_name">이름</string>
    <string name="label_handy">핸디</string>
    <string name="label_add">추가</string>
    <string name="label_plus_point">추가 포인트</string>
    <string name="label_minus_point">감소 포인트</string>
    <string name="label_buddy">버디</string>
    <string name="label_eagle">이글</string>
    <string name="label_albatross">알바트로스</string>
    <string name="label_hole_in_one">홀인원</string>
    <string name="label_near">니어</string>
    <string name="label_near_fail">니어 실패</string>
    <string name="label_handy_what">핸디</string>
    <string name="button_start_game">게임 시작</string>
    <string name="button_show_result">결과보기</string>
    <string name="button_modify_start_info">수정하기</string>
    <string name="label_result_game">게임 결과</string>
    <string name="label_input_result">점수 입력</string>
    <string name="label_double">배판인원</string>
    <string name="label_double_start">배판으로 시작</string>
    <string name="button_close_app">게임 종료 하기</string>
    <string name="label_danwi">타당</string>
</resources>