<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <variable
            name="entryInfoVm"
            type="com.codestorage.nidonnaedon.vm.EntryInfo" />

        <variable
            name="startInfoVm"
            type="com.codestorage.nidonnaedon.vm.StartInfo" />
    </data>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/label_start_game"
                android:textSize="@dimen/main_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/llEntryArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center|bottom"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:endIconMode="none">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="120dp"
                        android:layout_height="44dp"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:lineSpacingExtra="0dp"
                        android:padding="0dp"
                        android:singleLine="true"
                        android:hint="@string/label_name"
                        android:textSize="15sp"
                        android:imeOptions="actionNext"
                        android:nextFocusRight="@+id/etHandy"
                        android:text="@={entryInfoVm.name}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:endIconMode="none">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etHandy"
                        android:layout_width="100dp"
                        android:layout_height="44dp"
                        android:includeFontPadding="false"
                        android:inputType="numberSigned"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:lineSpacingExtra="0dp"
                        android:padding="0dp"
                        android:singleLine="true"
                        android:hint="@string/label_handy"
                        android:textSize="15sp"
                        android:imeOptions="actionDone"
                        android:nextFocusRight="@+id/etHandy"
                        android:text="@={entryInfoVm.handyStr}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/addPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="30dp"
                    android:enabled="@{entryInfoVm.enable}"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/label_add" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:scrollbars="vertical"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@id/llAddPointArea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llEntryArea"
                tools:listitem="@layout/entry_item" />

            <LinearLayout
                android:id="@+id/llAddPointArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDanwi"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:includeFontPadding="false"
                            android:inputType="number"
                            android:lineSpacingExtra="0dp"
                            android:padding="0dp"
                            android:singleLine="true"
                            android:hint="타당"
                            android:nextFocusDown="@+id/etBuddy"
                            android:text="@={startInfoVm.danwiStr}"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etBuddy"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:includeFontPadding="false"
                            android:inputType="number"
                            android:lineSpacingExtra="0dp"
                            android:padding="0dp"
                            android:singleLine="true"
                            android:hint="@string/label_buddy"
                            android:text="@={startInfoVm.buddyStr}"
                            android:nextFocusDown="@+id/etEagle"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEagle"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:includeFontPadding="false"
                            android:inputType="number"
                            android:lineSpacingExtra="0dp"
                            android:padding="0dp"
                            android:singleLine="true"
                            android:hint="@string/label_eagle"
                            android:text="@={startInfoVm.eagleStr}"
                            android:nextFocusDown="@+id/etAlbatross"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAlbatross"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:includeFontPadding="false"
                            android:inputType="number"
                            android:lineSpacingExtra="0dp"
                            android:padding="0dp"
                            android:singleLine="true"
                            android:hint="@string/label_albatross"
                            android:text="@={startInfoVm.albatrossStr}"
                            android:nextFocusDown="@+id/etHoleInOne"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etHoleInOne"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:includeFontPadding="false"
                            android:inputType="number"
                            android:lineSpacingExtra="0dp"
                            android:padding="0dp"
                            android:singleLine="true"
                            android:hint="@string/label_hole_in_one"
                            android:text="@={startInfoVm.holeInOneStr}"
                            android:nextFocusDown="@+id/etNear"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        app:endIconMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNear"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:includeFontPadding="false"
                            android:inputType="number"
                            android:lineSpacingExtra="0dp"
                            android:padding="0dp"
                            android:singleLine="true"
                            android:hint="@string/label_near"
                            android:text="@={startInfoVm.nearStr}"
                            android:nextFocusDown="@+id/etDouble"
                            android:textSize="15sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/startGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_start_game"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
</layout>